[package]
name = "AdventOfCode20"
version = "0.1.0"
authors = ["basimkhajwal <basimkhajwal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[dependencies]
