[package]
name = "AdventOfCode20"
version = "0.1.0"
authors = ["basimkhajwal <basimkhajwal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "day1.rs"

[[bin]]
name = "day2"
path = "day2.rs"

[[bin]]
name = "day3"
path = "day3.rs"

[[bin]]
name = "day4"
path = "day4.rs"

[[bin]]
name = "day5"
path = "day5.rs"

[[bin]]
name = "day6"
path = "day6.rs"

[[bin]]
name = "day7"
path = "day7.rs"

[[bin]]
name = "day8"
path = "day8.rs"

[[bin]]
name = "day9"
path = "day9.rs"

[dependencies]
